# faust-streaming

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  faust_worker.py  producer.py  pyproject.toml  requirements.txt
